@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.97 2003/03/20 15:31:12 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.98 2003/03/20 15:32:46 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -2000,8 +2000,14 @@ usr.sbin/rtadvd/rtadvd.c			1.27-1.28 (via patch)
   Add missing ND option length validation.  From KAME.
   [itojun, ticket #32]
 
-crypto/dist/openssl/crypto/rsa/rsa_eay.c        1.2
-crypto/dist/openssl/crypto/rsa/rsa_lib.c        1.2
+crypto/dist/openssl/crypto/rsa/rsa_eay.c	1.2
+crypto/dist/openssl/crypto/rsa/rsa_lib.c	1.2
 
   Enable RSA blinding by default.
   [itojun, ticket #34]
+
+crypto/dist/openssl/ssl/s3_srvr.c		1.4
+
+  OpenSSL Security Advisory [19 March 2003]
+  Klima-Pokorny-Rosa attack on RSA in SSL/TLS
+  [itojun, ticket #35]
